{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 17,
  "lineage": "ca88bda4-77bf-2c19-24ed-9850d8675dfa",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0664c911b424d5cae",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-07270c1ebc78fcbf6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07270c1ebc78fcbf6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5253d243e9ecce0",
            "private_dns": "ip-10-0-0-254.eu-west-1.compute.internal",
            "private_ip": "10.0.0.254",
            "public_ip": "34.242.133.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b88b97c565adbcd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea3eaf57bf837724",
            "tags": {
              "Name": "app-jack"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0541be2ca1a9713ed"
            ]
          },
          "dependencies": [
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.db.aws_instance.db",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012830ca5836fcce2",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c2525ff4d49a14fc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c2525ff4d49a14fc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-095e4ffb3ea40d15f",
            "private_dns": "ip-10-0-1-62.eu-west-1.compute.internal",
            "private_ip": "10.0.1.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-070a5f9c4153f39e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00197b2851fd103f0",
            "tags": {
              "Name": "app-jack-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc3f5466520b2721"
            ]
          },
          "dependencies": [
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bb09ac4ec4e13486",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-jack"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0070ba759876af74a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0ea3eaf57bf837724"
            ],
            "tags": {
              "Name": "app-jack"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-0999375de3e542c34",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 27017,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-00197b2851fd103f0"
            ],
            "tags": {
              "Name": "app-jack-db"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-045bf5fb06a062686",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb09ac4ec4e13486",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-jack-public"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017f55f2fe675a04b",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-jack-db-private"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec457af30c5f5528",
            "route_table_id": "rtb-045bf5fb06a062686",
            "subnet_id": "subnet-0ea3eaf57bf837724"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a99ce6d5d543529",
            "route_table_id": "rtb-017f55f2fe675a04b",
            "subnet_id": "subnet-00197b2851fd103f0"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0541be2ca1a9713ed",
            "description": "app-jack access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0541be2ca1a9713ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-jack",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-jack"
            },
            "timeouts": null,
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0bc3f5466520b2721",
            "description": "app-jack db access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc3f5466520b2721",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0541be2ca1a9713ed"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "app-jack-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-jack-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0ea3eaf57bf837724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ea3eaf57bf837724",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-jack"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-00197b2851fd103f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00197b2851fd103f0",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-jack-db"
            },
            "vpc_id": "vpc-058289b99060ca2d1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-058289b99060ca2d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03691a1e60e182b54",
            "default_route_table_id": "rtb-0fd66fc14b51c65f7",
            "default_security_group_id": "sg-0556148c299b025b9",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058289b99060ca2d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd66fc14b51c65f7",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-jack"
            }
          }
        }
      ]
    }
  ]
}